test/sema/typeck/generic/arguments-mismatch-unexpected.out
error: expected 0 type parameters but got 1.
--> arguments-mismatch-unexpected.dora:3:14
 | class A
 | fn foo() {
 |     let _a = A[Int32]();
                ~~~~~~~~~~
 | }
 | 
1 error found.
