test/sema/typeck/generic/arguments-mismatch-unexpected.dora
class A
fn foo() {
    let _a = A[Int32]();
}
